# spodiro-asr

./: .gitignore  README.md  basic.sh  batch_grammar.sh  compile_grammar.sh  configure.sh  fst-switch.sh  gmm-decode.sh  header.txt  healthy_path.txt  interactive.sh  interactive_yarp.sh  make_control_grammar.sh  make_healthy_grammars.sh  make_healthy_jsgf.py  make_jsgf.py  make_quiz_grammars.sh  miro.sh  new_recogniser.sh  nnet-decode-miro.sh  nnet-decode.sh  path.sh  pepper.sh  robo_config.txt  simulator.sh  spodiro_path.txt  start-asr.sh  wav.scp  wav_consent.scp  yarp_run.sh
basic_src/: Makefile  new-sf-controller.cc  sf-data-source.cc  sf-decode-config.h  sf-generic-config.cc  sf-generic-config.h  sf-generic-decoder.cc  sf-nnet-config-threaded.h  sf-nnet-threaded-decoder.cc  sf-output.cc
fresh_proc/: add_wav.py  asr_reader.py  eval_fresh.py  fast_reader.py  fast_rec.py  rec.py  rel.py
jsgf-dialogue/: question_jsgf_to_fsm.sh  question_n_grammar_lang.sh  spodiro_grammar.sh  sub_grammar.sh
miro_src/: new-sf-controller.cc  sf-data-source.cc  sf-data-source.h  sf-decode-config.cc  sf-generic-config.cc  sf-nnet-config-threaded.cc  sf-nnet-threaded-decoder.cc
misc/: fix_audio.py  log2tdf.py  segment.py  segment2.py
model_exp/: tree
pepper_src/: my-online.h  new-sf-controller.cc  new-sf-controller.h  sf-generic-config.cc  sf-nnet-config-threaded.cc  sf-nnet-decoder.cc  (+1 more)
post_proc/: eval.py  (+10 more)
yarp-out/: CMakeLists.txt  act_input.cpp  asr_master.cpp  asr_slave.cpp  com_master.cpp  com_slave.cpp  com_test.cpp  easel.cpp  fork.cpp  input.cpp  new_asr_master.cpp  static_master.cpp  yarp_close.cpp  yarp_test.cpp
(+393 files in other folders)
